# gm2tiled

./: .gitignore  CHANGELOG.md  Cargo.toml  deny.toml  justfile  readme.md  readme_zh-hans.md  release-plz.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
.github/workflows/: ci.yml  release-plz.yml  release.yml
scripts/: extract_data.csx  run_pixel_diff_suite.sh  run_sprite_validation.sh  validate_sprite_catalog.sh
src/: convert.rs  convert_detection.rs  export.rs  extract.rs  lib.rs  main.rs  model.rs  render.rs  schema.rs  textures.rs  tile_flags.rs
src/export/: tmx.rs  tsx.rs
tests/: convert_and_render.rs  export_xml.rs  extract_and_textures.rs  tile_flags_and_detection.rs
tests/common/: mod.rs
