[package]
name = "gm2tiled"
version = "0.2.0"
edition = "2024"
license = "GPL-3.0-or-later"
description = "Convert GameMaker 1.x/2.x data.win tilemaps to Tiled .tmx projects"

[[bin]]
name = "gm2tiled"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = { version = "0.25", default-features = false, features = ["png"] }
quick-xml = { version = "0.39", features = ["serialize"] }

[profile.dev]
opt-level = 1
